--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,7 +8,7 @@ body {
   color: #1c3f5c;
 }
 header {
-  padding: 7px 0;
+  padding: 15px 0;
   background-color: #21272b;
   display: flex;
   justify-content: space-between;
@@ -16,14 +16,14 @@ header {
   z-index: 9999;
 }
 header h1{
-  background-color: #aac7e3;
-  padding: 0 10px 0 30px;
-  font-size: 32x;
-  color: #213545
+  background-color: #a0cede;
+  padding: 0 10px 0 50px;
+  font-size: 48px;
+  color: #213545;
 }
 header a {
   text-decoration: none;
-  color: #aac7e3;
+  color: #a0cede;
 }
 header nav ul {
     display: flex;
@@ -39,14 +39,15 @@ header nav ul li a {
     padding: 10px 15px;
     margin: 10px;
     font-weight: lighter;
-    font-size: 1.55vw;
+    font-size: 24px;
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    border-bottom: 3px solid #aac7e3;
+    border-bottom: 3px solid #a0cede;
   
   }
 section{
-  padding: 60px;
+  padding: 100px;
 }
+
 .jumbotron{
   background-image: url("../images/background.jpg");
   background-size: cover;
@@ -54,11 +55,80 @@ section{
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-end;
+  padding: 150px;
 }
 .jumbotron h3{
-  font-size: 16px;
-  background-color: #aac7e3;
+  font-size: 36px;
+  background-color: #a0cede;
   position:relative;
-  right: 20px;
-  bottom: -50px;
+  bottom: -120px;
+  padding: 0 5px;
+}
+.section-title{
+  display: flex;
+  justify-content: flex-end;
+  font-size: 32px;
+  color: #024e76;  
+  border-right: 3px solid;
+  text-align: right;
+  width: 15%;
+  padding: 0 20px;
+  margin-right: 100px;
+}
+#about-me{
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+}
+.about-me-paragraph{
+  width: 70%;
+  line-height: 1.5;
+}
+#work{
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+}
+.wrapper {
+  width: 70%;
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  background-color: #fff;
+  color: #444;
+}
+.box {
+  background-color: #444;
+  color: #fff;
+  border-radius: 5px;
+  padding: 20px;
+  font-size: 150%;
+}
+.run-buddy{
+  grid-row: 1 / span 2;
+  grid-column: 1 / span 2;
+}
+#contact-me{
+  display:flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  align-items: center;
+}
+.contact-li a{
+  text-decoration: none;
+  color: #024e76;
+
+}
+.contact-li nav ul{
+  width: 70%;
+  display: flex;
+  list-style: none;
+}
+.contact-li nav ul li a{
+  margin: 15px;
+  padding: 5px;
+  font-size: 20px;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  border-bottom: 3px solid #024e76;
 }
