--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -192,3 +192,76 @@ section{
   opacity: .3;
 
 }
+/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
+@media screen and (max-width: 980px) {
+  header {
+    padding-bottom: 0;
+    justify-content: center;
+    position: relative;
+  }
+  header h1 {
+    width: 100%;
+    text-align: left;
+  }
+  section{
+    padding: 40px;
+  }
+  header nav ul {
+    margin-top: 20px;
+    width: 100%;
+    justify-content: center;
+  }
+  header nav ul li a {
+    padding: 5px 7px;
+    margin: 5px;
+    font-weight: lighter;
+    font-size: 1rem;
+  }
+  .jumbotron h3{
+    font-size: 1.2rem;
+    display:absolute;
+    left: 60px;
+
+  }
+  #about-me, #work, #contact-me{
+    justify-content: center;
+  }
+  .section-title {
+    font-size: 1.5rem;
+    width: 80%;
+    justify-content: center;
+    border-bottom: 3px solid #024e76;
+    border-right: 0;
+    margin-bottom: 10px;
+    margin-right: 0;
+  }
+  .about-me-paragraph{
+    width: 100%;
+    text-align: left;
+  }
+  .contact-li nav ul {
+    width: 80%;
+    display: block;
+  }
+  .contact-li nav ul li{
+    margin: 20px 0;
+  }
+  .contact-li nav ul li a {
+    margin: 1em 0;
+    font-weight: lighter;
+    font-size: 1rem;
+  }
+  .wrapper{
+    flex: 0 70%;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(5, 200px);
+    width: 90%;
+  
+  }
+  .run-buddy{
+    grid-row: 1 / span 1;
+    grid-column: 1 / span 1;
+  }
+  .box{
+    margin-top: 20px;
+  }
