--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -118,8 +118,9 @@ section{
   position: relative;
 }
 .project-two{
-  background-image: url(https://picsum.photos/200);
+  background-image: url(../images/project1.png);
   width: 100%;
+  height: 100%;
   background-size: cover;
   position: relative;
 }
