--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -112,7 +112,7 @@ section{
   font-weight: lighter;
 }
 .run-buddy{
-  background-image: url(../images/run-buddy.png);
+  background-image: url(../images/musicline.png);
   width: 100%;
   background-size: cover;
   position: relative;
@@ -125,7 +125,7 @@ section{
   position: relative;
 }
 .project-three{
-  background-image: url(https://picsum.photos/200);
+  background-image: url(../images/run-buddy.png);
   width: 100%;
   background-size: cover;
   position: relative;
