--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -131,7 +131,7 @@ section{
   position: relative;
 }
 .project-four{
-  background-image: url(../images/run-buddy.png);
+  background-image: url(../images/project3.png);
   width: 100%;
   background-size: cover;
   position: relative;
